customer-order-service/customer-service/customers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-deployment
  labels:
    app: customers-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers
  template:
    metadata:
      labels:
        app: customers
    spec:
      containers:
      - name: customers
        image: viren1990/customers:latest
        ports:
        - containerPort: 8080
