customer-order-service/customer-service/customers-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: customers-service
  name: customers-service
spec:
  type: ClusterIP
  ports:
  - name: http-customers
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: customers
