customer-order-service/customer-service/customers-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: customers-destination-rule
spec:
  host: customers-service
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        maxRequestsPerConnection: 1
        http2MaxRequests: 1
