customer-order-service/customer-service/customers-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customers-virtual-service
spec:
  hosts:
  - "*"
  gateways:
    - customers-gateway
  http:
  - route:
    - destination:
        host: customers-service
        port: 
          number: 80
    fault:
        delay:
          percent: 100
          fixedDelay: 10s
